dark mode fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,35 @@
     --widget-background-color-dark: rgb(60, 61, 63);
     --widget-background-color-light: rgb(255, 255, 255);
     --main-background-color-dark: rgb(35, 35, 35);
-    --main-background-color-light:rgb(235, 235, 235);
+    --main-background-color-light: rgb(235, 235, 235);
     --widget-background-color-dark-mobile: rgb(139, 141, 143);
     --widget-background-color-light-mobile: rgb(255, 255, 255);
     --border-radius: 25px;
     --border-radius-mobile: 15px;
     --searchbar-border-radius: 1rem;
     --searchbar-border-radius-mobile: 0.5rem;
+    --font-color: rgb(171,171,171);
+    --widget-background-color: var(--widget-background-color-light);
+    --main-background-color: var(--main-background-color-light);
+    --margin-x: 1%;
+    --margin-y: 0.5%;
     font-family: "heebo", sans-serif;
-
 }
 
- /* LAYOUT HOME */
+[data-theme="dark"] {
+    --widget-background-color: var(--widget-background-color-dark);
+    --main-background-color: var(--main-background-color-dark);
+}
 
+
+ /* LAYOUT HOME */
+ body {
+    background-color: var(--main-background-color);
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: var(--font-color);
+}
  .container {
     display: flex;
     height: 100vh;
@@ -25,39 +41,83 @@
   .center-wrapper {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
   }
   
   .widget {
     display: flex;
-    background-color: var(--widget-background-color-dark);
-    margin: 20px;
-    border-radius: 8px;
+    background-color: var(--widget-background-color);
+    border-radius: var(--border-radius);
+    margin-top: var(--margin-y);
+    margin-bottom: var(--margin-y);
+    margin-left: var(--margin-x);
+    margin-right: var(--margin-x)
   }
   
-  .sidebar {
-    width: 250px;
+  #sidebar {
+    width: 15dvw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
+
   }
   
   #search-cities {
     width: 100%;
-    height: 4%;
+    height: 6%;
     display: flex;
     align-items: center;
+    border-radius: 12px;
     justify-content: center;
   }
+
+  #search-cities form {
+    width: 95%;
+  }
+
+  .searchbar {
+    width: 100%;
+    background-color: var(--widget-background-color);
+    border: none;
+    color: var(--font-color);
+  }
+.searchbar::placeholder {
+    color: var(--font-color);
+    opacity: 0.7;
+}
+  .searchbar:active, .searchbar:focus {
+    outline: none;
+  }
+
+  .home {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+
+  .home a {
+    text-decoration: none;
+    color: var(--font-color);
+  }
   
+  .home a:hover {
+    text-decoration: underline;
+  }
+  
+  .home a:active {
+    color: rgb(130, 130, 130);
+  }
+
   /* #search-cities form {
     width: ;
   }
    */
   #todays-forecast {
     width: 100%;
+    height: 100dvh;
+    margin-top: 3%;
     text-align: center;
   }
   
@@ -67,13 +127,26 @@
   
   }
   
-  .seven-day-forecast {
-    width: 500px;
+  #seven-day-forecast {
+    width: 30dvw;
+    padding-left: 2.5%;
+    padding-top: 1%;
   }
   
   
   
-  
+  .sidebar-item {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+
+  .sidebar-item a {
+    text-decoration: none;
+    color: var(--font-color);
+    margin-top: 15%;
+  }
   
   
   
@@ -100,7 +173,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #73C0FC;
+    background-color: #cdcbcb;
     transition: .4s;
     border-radius: 30px;
   }
@@ -187,21 +260,3 @@
     transform: translateX(30px);
   }
   
-
-@media (prefers-color-scheme: light) {
-    .widget {
-        background-color: var(--widget-background-color-light);
-    }
-    body {
-        background-color: var(--main-background-color-light);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    .widget {
-        background-color: var(--widget-background-color-dark);
-    }
-    body {
-        background-color: var(--main-background-color-dark);
-    }
-}
